--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.minimap.enabled": false,
-  "python.pythonPath": ".venv/bin/python",
+  "python.pythonPath": "./.venv/bin/python",
   "python.linting.flake8Enabled": true,
   "python.linting.flake8Args": [
     "--max-line-length=120",
