--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,25 @@
 repos:
--   repo: https://github.com/ambv/black
+  - repo: https://github.com/ambv/black
     rev: 21.9b0
     hooks:
-    - id: black
-      language_version: python3.9
-      stages: [commit]
--   repo: https://gitlab.com/pycqa/flake8
+      - id: black
+        language_version: python3.9
+        stages: [commit]
+  - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
-    - id: flake8
-      stages: [commit]
--   repo: local
+      - id: flake8
+        stages: [commit]
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        language: system
+        entry: pytest -v -s
+        always_run: true
+        pass_filenames: false
+        stages: [commit]
+  - repo: local
     hooks:
       - id: requirements
         name: requirements
