--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,16 @@ distlib==0.3.3
 Faker==9.5.2
 filelock==3.3.1
 flake8==4.0.1
+Flask==2.0.2
+Flask-Cors==3.0.10
 greenlet==1.1.2
 identify==2.3.1
 iniconfig==1.1.1
 isort==5.9.3
+itsdangerous==2.0.1
+Jinja2==3.0.2
 lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.6.0
@@ -37,4 +42,5 @@ toml==0.10.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
 virtualenv==20.9.0
+Werkzeug==2.0.2
 wrapt==1.13.2
